...
      onFocusGained: _onFocusGained,
      child: Consumer4<PeriodoAcademicoProvider, GrupoProvider, HorarioProvider,
          MateriaProvider>(
        builder: (context, periodoProvider, grupoProvider, horarioProvider,
            materiaProvider, child) {
          return ClarityManagementPage(
            title: 'Horarios',
            backRoute: '/academic',
            isLoading: horarioProvider.isLoading,
            hasError: horarioProvider.hasError,
            errorMessage: horarioProvider.errorMessage,
            itemCount: _selectedGrupo != null ? 1 : 0,
            itemBuilder: (context, index) => WeeklyCalendar(
...
                            Text('Selecciona un grupo para crear una clase')),
                  );
                  return;
                }
                _handleEmptyCellTap(_horas.first, _diasSemanaValues.first);
              },
              tooltip: 'Crear Clase',
              child: const Icon(Icons.add),
            ),
          );
        },
      ),
    );
...
